versioned_docs/version-2.31/reference/subsystems/pytest.mdx
---
title: pytest
description: |
  The pytest Python test framework (https://docs.pytest.org/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The pytest Python test framework (https://docs.pytest.org/).

This version of Pants uses `pytest` version 8.4.2 by default. Use a dedicated lockfile and the `install_from_resolve` option to control this.

Backend: <span className="color--primary">`pants.backend.python`</span>

Config section: <span className="color--primary">`[pytest]`</span>

<span className={styles.options}>

## Basic options

### `allow_empty_test_collection`

<Option
  cli_repr={`--[no-]pytest-allow-empty-test-collection`}
  env_repr='PANTS_PYTEST_ALLOW_EMPTY_TEST_COLLECTION'
  toml_repr={`[pytest]
allow_empty_test_collection = <bool>`}
  default_repr={`False`}
>

If true, treat pytest exit code 5 (&#x22;No tests were collected&#x22;) as success.

Pytest returns exit code 5 when no tests are collected, e.g., when all tests in a file are skipped via markers or deselected via `-k`. By default, Pants treats this as a test failure. Enable this option to instead treat it as &#x22;no tests found&#x22;, which will be skipped in the test summary.

See https://docs.pytest.org/en/stable/reference/exit-codes.html

</Option>

### `args`

<Option
  cli_repr={`--pytest-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_PYTEST_ARGS'
  toml_repr={`[pytest]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Pytest, e.g. `--pytest-args='-k test_foo --quiet'`.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]pytest-skip`}
  env_repr='PANTS_PYTEST_SKIP'
  toml_repr={`[pytest]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Pytest when running `pants test`.

</Option>

### `xdist_enabled`

<Option
  cli_repr={`--[no-]pytest-xdist-enabled`}
  env_repr='PANTS_PYTEST_XDIST_ENABLED'
  toml_repr={`[pytest]
xdist_enabled = <bool>`}
  default_repr={`False`}
>

If true, Pants will use `pytest-xdist` (https://pytest-xdist.readthedocs.io/en/latest/) to parallelize tests within each `python_test` target.

NOTE: Enabling `pytest-xdist` can cause high-level scoped fixtures (for example `session`) to execute more than once. See the `pytest-xdist` docs for more info: https://pypi.org/project/pytest-xdist/#making-session-scoped-fixtures-execute-only-once

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--pytest-config=<file_option>`}
  env_repr='PANTS_PYTEST_CONFIG'
  toml_repr={`[pytest]
config = <file_option>`}
  default_repr={`None`}
>

Path to a config file understood by Pytest (https://docs.pytest.org/en/latest/reference/customize.html#configuration-file-formats). Setting this option will disable `[pytest].config_discovery`. Use this option if the config is located in a non-standard location.

</Option>

### `config_discovery`

<Option
  cli_repr={`--[no-]pytest-config-discovery`}
  env_repr='PANTS_PYTEST_CONFIG_DISCOVERY'
  toml_repr={`[pytest]
config_discovery = <bool>`}
  default_repr={`True`}
>

If true, Pants will include all relevant Pytest config files (e.g. `pytest.ini`) during runs. See https://docs.pytest.org/en/stable/customize.html#finding-the-rootdir for where config files should be located for Pytest to discover them.

Use `[pytest].config` instead if your config is in a non-standard location.

</Option>

### `console_script`

<Option
  cli_repr={`--pytest-console-script=<str>`}
  env_repr='PANTS_PYTEST_CONSOLE_SCRIPT'
  toml_repr={`[pytest]
console_script = <str>`}
  default_repr={`pytest`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an `--entry-point` since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--pytest-entry-point=<str>`}
  env_repr='PANTS_PYTEST_ENTRY_POINT'
  toml_repr={`[pytest]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a `--console-script` (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `execution_slot_var`

<Option
  cli_repr={`--pytest-execution-slot-var=<str>`}
  env_repr='PANTS_PYTEST_EXECUTION_SLOT_VAR'
  toml_repr={`[pytest]
execution_slot_var = <str>`}
  default_repr={`None`}
>

If a non-empty string, the process execution slot id (an integer) will be exposed to tests under this environment variable name.

</Option>

### `install_from_resolve`

<Option
  cli_repr={`--pytest-install-from-resolve=<str>`}
  env_repr='PANTS_PYTEST_INSTALL_FROM_RESOLVE'
  toml_repr={`[pytest]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve.

This resolve must be defined in `[python].resolves`, as described in https://www.pantsbuild.org/2.31/docs/python/overview/lockfiles#lockfiles-for-tools.

The resolve&#x27;s entire lockfile will be installed, unless specific requirements are listed via the `requirements` option, in which case only those requirements will be installed. This is useful if you don&#x27;t want to invalidate the tool&#x27;s outputs when the resolve incurs changes to unrelated requirements.

If unspecified, and the `lockfile` option is unset, the tool will be installed using the default lockfile shipped with Pants, which uses `pytest` version 8.4.2.

If unspecified, and the `lockfile` option is set, the tool will use the custom `pytest` &#x22;tool lockfile&#x22; generated from the `version` and `extra_requirements` options. But note that this mechanism is deprecated.

</Option>

### `junit_family`

<Option
  cli_repr={`--pytest-junit-family=<str>`}
  env_repr='PANTS_PYTEST_JUNIT_FAMILY'
  toml_repr={`[pytest]
junit_family = <str>`}
  default_repr={`xunit2`}
>

The format of generated junit XML files. See https://docs.pytest.org/en/latest/reference.html#confval-junit_family.

</Option>

### `requirements`

<Option
  cli_repr={`--pytest-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYTEST_REQUIREMENTS'
  toml_repr={`[pytest]
requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

If `install_from_resolve` is specified, install these requirements, at the versions provided by the specified resolve&#x27;s lockfile.

Values can be pip-style requirements (e.g., `tool` or `tool==1.2.3` or `tool>=1.2.3`), or addresses of `python_requirement` targets (or targets that generate or depend on `python_requirement` targets). Make sure to use the `//` prefix to refer to targets using their full address from the root (e.g. `//3rdparty/python:tool`). This is necessary to distinguish address specs from local or VCS requirements.

The lockfile will be validated against the requirements - if a lockfile doesn&#x27;t provide the requirement (at a suitable version, if the requirement specifies version constraints) Pants will error.

If unspecified, install the entire lockfile.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
